test/e2e/conformance/tests/httproute-wasmplugin-template.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Secret
metadata:
  name: auth-secret
  namespace: higress-conformance-infra
type: Opaque
stringData:
  auth.credential1: "credential1"
  auth.credential2: "credential2"

---
apiVersion: v1
kind: Secret
metadata:
  name: auth-secret
  namespace: higress-system
type: Opaque
stringData:
  auth.credential3: "credential3"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-foo
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: "foo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---
apiVersion: extensions.higress.io/v1alpha1
kind: WasmPlugin
metadata:
  name: wasm-template-keyauth
  namespace: higress-system
spec:
  defaultConfig:
    consumers:
      - credential: "Bearer credential1"
        name: consumer1
      - credential: "Bearer ${secret.higress-conformance-infra/auth-secret.auth.credential2}"
        name: consumer2
      - credential: "Bearer ${secret.auth-secret.auth.credential3}"
        name: consumer3
    global_auth: true
    keys:
      - authorization
    in_header: true
  defaultConfigDisable: false
  priority: 300
  url: oci://higress-registry.cn-hangzhou.cr.aliyuncs.com/plugins/key-auth:1.0.0
  imagePullPolicy: Always
